hphp/test/zend/bad/bug36568.php
<?php
ini_set("memory_limit", "32M");
echo ini_get("memory_limit");
?>